--- a/q/274342.html
+++ b/q/274342.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>208</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
-<tr d-ix="1"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
-<tr d-ix="2"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
-<tr d-ix="3"><td>087</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="0"><td>086</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="1"><td>208</td><td>GNU C</td><td>240725T221756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274444#274444">Knogger</a></td></tr>
+<tr d-ix="2"><td>092</td><td>Zsh</td><td>240724T174928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274418#274418">GammaFun</a></td></tr>
+<tr d-ix="3"><td>065</td><td>sed 4.2.2 E</td><td>240724T163625Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274414#274414">Jordan</a></td></tr>
 <tr d-ix="4"><td>040</td><td>Uiua</td><td>240724T170308Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274416#274416">Marcos G</a></td></tr>
 <tr d-ix="5"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
 <tr d-ix="6"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
@@ -41,7 +41,16 @@
 <tr d-ix="12"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
 <tr d-ix="13"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, <s>214</s> 208 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s> <s>87</s></sup> 86 bytes</h1>
+<p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em><br />
+<em>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/122251/no-comment">@no comment</a></em></p>
+<pre class="lang-python prettyprint-override"><code>def f(s,o):
+ for i in o:s[(j+i%5or 1)-1:0]=s.pop(j:=s.index('|'))[i%2&gt;0&lt;j==s.pop(j-1)]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=XVDPaoMwHD7rUwRLMdlU2sFgiAplYzDYYdCyi_UgM2JEkmBS6MA32aWX7Z162ZPssF-i3bp9hBC_f_6Stw_5qhvBD4f3na7Dm-NzRWtUYxUIEruoFj1iiHEkYpXj9pLNr4FZknAZL4pURVJI3MZwYLyie-wPPiE5m19li6RNT3q4JMXU_mkKO8ap7ZSU44X5DYBxGSC6lyi1etQr3TOJSaRkxzT2tjrMkEesVwWQVeCE0KT7W-0HMJjVRxH2aCpxR3qngc4vVGE_awyEbYoofxEVxWSMy55xjXPvfvXw6AXIe1qt116Re17UCsZNiqA0NcMWoJ6xZLzl4fi1aZhCsEqkqdKD48wSg5lF5jhwl01TDkZ1b3e9GuBZKK-s28nOkYxuYzrzDO5EqEGXvR5zyS-yxKaGk-vH5N7RjmqKyq6DqZzZH2SQtDHXaA4Mkthpxy53xYVuaG96Bv0_a2BtenyEbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Modifies the input in-place</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" rel="nofollow noreferrer">GNU C</a>, <s>214</s> 208 bytes</h1>
 <ul>
 <li>-6 bytes by replacing all <code>*(x+y)</code> by <code>x[y]</code></li>
 </ul>
@@ -49,7 +58,7 @@
 </code></pre>
 <p><a href="https://www.programiz.com/online-compiler/33a9kPKYfJEho" rel="nofollow noreferrer">Try it on programiz.com</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>103</s> 92 bytes</h1>
 <p>Saved <strong>11 bytes</strong> using <code>r[1]=</code> to remove the first character of <code>$r</code> and <code>l[-1]=</code> to remove the last character of <code>$l</code>.</p>
 
 <pre class="lang-sh prettyprint-override"><code>IFS=\|
@@ -74,7 +83,7 @@ for m;    # motions as separate arguments
 &lt;&lt;&lt;$l\|$r
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-E</code>, 65 bytes</h1>
 <p>The input string and sequence of moves should be separated by a tab. Code contains literal tab characters.</p>
 <pre><code>:
 s/(.)?\|(.* )&lt;/|\1\2/
@@ -83,15 +92,6 @@ s/.?\|(.*   )#/|\1/
 t
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEXXySkC2bSCDXUpIV2oN3CZTaABC6GRznQ3ZzdOWkR9zOr/xx@IYylnCabp2sFT0x1Eaw353p8MpzVphy11xve0p93H1NU0Eku5PyZQfEFhBCShbUVvOHlZF6C8qDiPWy/cL3YXuAfCsOCu2C/OymtMEaMKKfH2H44FSbzI39wrP3HKM5Tj7Q0" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>100</s> <s>96</s></sup> 87 bytes</h1>
-<p><em>-4 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a></em><br />
-<em>-9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/122251/no-comment">@no comment</a></em></p>
-<pre class="lang-python prettyprint-override"><code>def f(s,o):
- for i in o:s[max(0,j+i%5-1):0]=s.pop(j:=s.index('|'))[i%2&gt;0&lt;j==s.pop(j-1)]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=XVDNSsMwHD-3TxEyRhPtSicIUtrCUATBg-DAQ9dDsSlNqWloMpiQN_Gyi77TLj6JB_PR6fRHCOnvq__k7YO_ynZg-_37VjaLq8NTTRrQIBEOOPFBM4yAAsrAkIjipdqhOOzO6fxyscRJXGYi4gNHXaIPlNVkhwIVYFzQ-UUep1121LW7nOo_TWNPGbGlnDAUm_9oUMZDQHYcZFaPRiFHyhGOBO-pRHAjFzmA2HpFqLNCO3Vo0oONDEKwdLoT9R5NJb6jt1LTxZko7WeDNGGbIsKeh5og7OJ8pEyiAt6u7u5hCODD6vERlgWEUTdQZlIYZJkZttTqCYvdLfeHr3VLBdCrApIIqTxvlhrMLHLP03dZt5Uyqn-9HYXSz0JYbd1eforUuY3pxKP8iRBKVqN0ufQXeWpT6uj6Mfk3pCeSgKrv9VTe7A9ynbQx32ieHiS107ouf8UG2ZLR9Cj5P2tgbdI9wjc" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Modifies the input in-place</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 40 bytes</h1>
 <pre><code>⍜⊙↻⊂@|∧⊃(+-⊸¬=@&gt;|⍜⊙↻↘=@#⊙-⊙1):⊙:⊙▽⊃⊗⊸≠@|
