--- a/q/256034.html
+++ b/q/256034.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>000</td><td>Python</td><td>240728T010022Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/274479#274479">aeh5040</a></td></tr>
+<tr d-ix="0"><td>000</td><td>Python 3</td><td>240728T010022Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/274479#274479">aeh5040</a></td></tr>
 <tr d-ix="1"><td>031</td><td>Python 3</td><td>230101T232226Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256250#256250">DialFros</a></td></tr>
 <tr d-ix="2"><td>024</td><td>Julia 1.0</td><td>230101T231350Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256249#256249">DialFros</a></td></tr>
 <tr d-ix="3"><td>084</td><td>Python 3</td><td>221226T122950Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256042#256042">corvus_1</a></td></tr>
@@ -45,13 +45,14 @@
 <tr d-ix="16"><td>061</td><td>Factor + math.combinatorics</td><td>221226T120024Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256040#256040">chunes</a></td></tr>
 <tr d-ix="17"><td>159</td><td>Python 3</td><td>221226T112447Z</td><td><a href="https://codegolf.stackexchange.com/questions/256034/normal-subgroups-of-s-4/256038#256038">U13-Forw</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, 0 bytes</h1>
-<p>Items in identity order, to be concatenated and fed to the interpreter (only difference is in the last string literal):</p>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 0 bytes</h1>
+<p>Items in identity order, to be concatenated and fed to the interpreter (only difference between them is in the last string literal):</p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'0')</code></p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'1')</code></p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'2')</code></p>
 <p><code>(lambda x=0:(lambda y:lambda z:print((lambda p:'I'if p in'123'else'K'if p in'032 301 210'else'A'if p in'231 312 203 320 013 130 021 102'else'S')(x()+y()+z())))if isinstance(x,type(lambda:0))else'3')</code></p>
 <p>Output: <code>I</code>, <code>K</code>, <code>A</code>, <code>S</code> for the four cases in order.</p>
+<p><a href="https://tio.run/##3Y@7DsIwDEV3vsJbEsHgxxaJgRExsnYpEESkEiKaoenPh4g@PqKWLF/5@ko@MafXJ0gpumvft0cLwxHtorOdxWjj14ekFyNadVb@CRF8UMSiXNc7dVlXKAyCBEw4WafVYiEQYmAUEEZAEiCpkwkIeTq/KqMHbfa59qhNrRr3vQ99asPd6eGQcnTzNxaN@adYmWbX7DZAIpshwc2QkDKl/AA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 31 bytes</h1>
 
