--- a/q/274485.html
+++ b/q/274485.html
@@ -26,20 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
-<tr d-ix="1"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
-<tr d-ix="3"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
-<tr d-ix="4"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
-<tr d-ix="5"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
-<tr d-ix="6"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
-<tr d-ix="7"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
-<tr d-ix="8"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
-<tr d-ix="9"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
-<tr d-ix="10"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
-<tr d-ix="11"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
+<tr d-ix="0"><td>004</td><td>K ngn/k</td><td>240728T133436Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274504#274504">akamayu</a></td></tr>
+<tr d-ix="1"><td>027</td><td>PowerShell</td><td>240728T121823Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274500#274500">user3141</a></td></tr>
+<tr d-ix="2"><td>036</td><td>Python 3</td><td>240728T115156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274497#274497">matteo_c</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Google Sheets</td><td>240728T102209Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274491#274491">doubleun</a></td></tr>
+<tr d-ix="4"><td>015</td><td>Arturo</td><td>240728T112337Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274496#274496">chunes</a></td></tr>
+<tr d-ix="5"><td>003</td><td>Uiua SBCS</td><td>240728T105800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274495#274495">chunes</a></td></tr>
+<tr d-ix="6"><td>058</td><td>JavaScript Node.js</td><td>240728T104100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274493#274493">Andrew B</a></td></tr>
+<tr d-ix="7"><td>026</td><td>Python</td><td>240728T102653Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274492#274492">xnor</a></td></tr>
+<tr d-ix="8"><td>024</td><td>JavaScript ES6</td><td>240728T101535Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274489#274489">Arnauld</a></td></tr>
+<tr d-ix="9"><td>057</td><td>C tcc</td><td>240728T101650Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274490#274490">ovs</a></td></tr>
+<tr d-ix="10"><td>002</td><td>Vyxal 3</td><td>240728T101335Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274488#274488">RubenVer</a></td></tr>
+<tr d-ix="11"><td>002</td><td>APL Dyalog Vision</td><td>240728T095611Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274487#274487">Ad&#225;</a></td></tr>
+<tr d-ix="12"><td>002</td><td>Vyxal</td><td>240728T095024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274485/find-the-newest-element/274486#274486">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 4 bytes</h1>
+<p>The last <code>*|</code> unique <code>?</code> element.</p>
+<pre><code>*|?:
+</code></pre>
+<p><a href="https://ngn.bitbucket.io/k#eJxLs9Kqsbfi4kpzUHLUdXL0c/QBk36Ouj6OTkoAcrEHVA==" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 27 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>($args|% *ay|select -u)[-1]
 </code></pre>
@@ -49,13 +56,13 @@
 </code></pre>
 <p>Converts the input string to a char array by calling the string's member &quot;ToCharArray&quot;, then selecting only unique characters, and picking the last char.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 36 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:list({a:0for a in x})[-1]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/P802JzE3KSVRocIqJ7O4RKM60cogLb9IIVEhM0@holYzWtcw9n9BUWZeiUaahpKjrpOjn6MPmPRz1PVxdFLS1PwPAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 64 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 64 bytes</h1>
 <pre><code>=+let(β,A:A,γ,sort(row(β)),sort(β,1=countifs(β,β,γ,&quot;&lt;=&quot;&amp;γ),,γ,))
 </code></pre>
 <p>...or:</p>
@@ -64,7 +71,7 @@
 <p>Put the array in column <code>A1:A</code> and the formula in cell <code>B1</code>.</p>
 <p><img src="https://i.sstatic.net/cWoifoPg.png" alt="screenshot" /></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 15 bytes</h1>
 <pre><code>$=&gt;[last∪&lt;=&amp;]
 </code></pre>
 <p><a href="https://i.sstatic.net/OlBT6a31.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/OlBT6a31.png" alt="running the code in arturo interpreter" /></a></p>
@@ -76,7 +83,7 @@ last   ; last element of...
 </code></pre>
 <p>This is two bytes shorter than <code>last unique&amp;</code>, but requires the latest version for <code>∪</code>, hence it won't work online yet.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 3 bytes</h1>
 <pre><code>⊢⇌◴
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__RiDihpAg4oqi4oeM4pe0CgpGICJBLUJBTkFMLUJBTkFOQS1MQUIiCkYgIjEyMzEyMzMyIgo=" rel="nofollow noreferrer">Try it!</a></p>
@@ -85,20 +92,20 @@ last   ; last element of...
 ⊢⇌   # ‎⁢last
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[a={},b='',[...s].map(e=&gt;(e in a)?0:[a[e]=1,b=e]),b][3]
 </code></pre>
 <p><a href="https://tio.run/##HcqxCsIwEADQX@mWBJJDcROuks6lP3DccK1XqdSkNOIifnsUlze9u7ykTPuyPUPKV60z1oItCb4/fkRjPAFAYXjIZhVbq82SGnGXw5mElPH4W8rOj0wnrlNOJa8Ka77Z2ZoYujjE/u8QQx8741z9Ag" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python</a>, 26 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:max(s,key=s.find)
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYKjexQqNYJzu10rZYLy0zL0Xzf0FRZl6JRpqGkqOuk6Ofow@Y9HPU9XF0UtLU/A8A" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Takes a string as input. <code>s.find(c)</code> outputs the first index in <code>s</code> where the character <code>c</code> appears, so using <code>s.find</code> as a key for <code>max</code> returns the character whose first occurrence in <code>s</code> comes latest.</p>
 </div>
-<div id="pu7" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
+<div id="pu8" class="pu"><h1>JavaScript (ES6), 24 bytes</h1>
 <p>Note that it works because <code>Set</code> is guaranteed to maintain the insertion order of its elements.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;[...new Set(s)].pop()
@@ -113,13 +120,13 @@ last   ; last element of...
 .pop()       // return the last element
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="http://savannah.nongnu.org/projects/tinycc" rel="nofollow noreferrer">C (tcc)</a>, 57 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>k;f(char*s){for(int v[128]={};*s;s++)k=v[*s]++?k:*s;k=k;}
 </code></pre>
 <p><a href="https://tio.run/##S9YtSU7@/z/bOk0jOSOxSKtYszotv0gjM69EoSza0Mgi1ra61lqr2LpYW1sz27YsWqs4VlvbPtsKKJRtm21d@z83MTNPQ7OaS0GhoLQEZIRGmoaSo66To5@jD5j0c9T1cXRS0tS05qr9DwA" rel="nofollow noreferrer" title="C (tcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Vyxal 3, 2 bytes</h1>
+<div id="pu10" class="pu"><h1>Vyxal 3, 2 bytes</h1>
 <pre><code>ut
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#WyIiLCIiLCJcIkEtQkFOQUwtQkFOQU5BLUxBQlwiIHV0IiwiIiwiIiwiMy40LjIiXQ==" rel="nofollow noreferrer">try</a></p>
@@ -129,13 +136,13 @@ last   ; last element of...
 <li>of the input</li>
 </ul>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/abrudz/dyalog_vision/" rel="nofollow noreferrer">APL (Dyalog Vision)</a>, 2 bytes</h1>
 
 <pre class="lang-apl prettyprint-override"><code>⊇∪
 </code></pre>
 <p><code>⊇</code> last <code>∪</code> unique</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>Ut
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJVdCIsIiIsIkEtQkFOQUwtQkFOQU5BLUxBQiJd" rel="nofollow noreferrer">Try it Online!</a></p>
